--- a/public/fonts/font-awesome/css/font-awesome.css
+++ b/public/fonts/font-awesome/css/font-awesome.css
@@ -1030,6 +1030,9 @@
 .fa-fire-extinguisher:before {
   content: "\f134";
 }
+.fa-mail-bulk:before { 
+  content: "\f674";
+}
 .fa-rocket:before {
   content: "\f135";
 }
