--- a/src/components/Product/product.scss
+++ b/src/components/Product/product.scss
@@ -17,10 +17,12 @@
   .product-container {
     width: 100%;
     height: 100%;
+    .cover-none {
+      background-size: contain !important;
+    }
     .top {
       height: 80%;
       width: 100%;
-      // background: url(https://i.ibb.co/YZv0LCS/p1.jpg) no-repeat center center;
       -webkit-background-size: 100%;
       -moz-background-size: 100%;
       -o-background-size: 100%;
@@ -131,14 +133,14 @@
 
   .inside {
     z-index: 9;
-    background: linear-gradient(to right, #6372ff 0%, #5ca9fb 100%);
+    background: linear-gradient(to right, #55a35a 0%, #a6ce37 100%);
     width: 140px;
     height: 140px;
     position: absolute;
     top: -70px;
     right: -70px;
     border-radius: 0px 0px 200px 200px;
-    transition: all 0.5s, border-radius 2s, top 1s;
+    transition: all 0.8s, border-radius 2s, top 1s;
     overflow: hidden;
     .icon {
       position: absolute;
@@ -178,10 +180,21 @@
       p,
       table {
         color: white;
+        font-size: 18px;
       }
       p {
         font-size: 13px;
       }
     }
+  }
+}
+
+@media screen and (min-width: 768px) {
+  #about img {
+    margin: 50px 0;
+  }
+  .products-items {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
   }
 }
